Finition du controller Genre
