# app/Models/Genre.php
@@ -6,6 +6,15 @@ use Illuminate\Database\Eloquent\Model;
 
 /**
  * Class Genre
+ *
+ *  @SWG\definition(
+ *   required={"id_genre"},
+ *   @SWG\Xml(name="Genre"),
+ *   @SWG\Property(format="int64", property="id_genre", type="number", default=1),
+ *   @SWG\Property(format="string", property="nom", type="string", default="genre"),
+ *   )
+ *
+ *
  */
 class Genre extends Model
 {
